--- a/app/src/main/res/layout/list_member.xml
+++ b/app/src/main/res/layout/list_member.xml
@@ -44,5 +44,16 @@
             app:layout_constraintTop_toBottomOf="@+id/age"
             tools:text="address" />
 
+        <TextView
+            android:id="@+id/hobby"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/address"
+            tools:text="address" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
